--- build 1008

- fix publishing stories with media that was imported