@@ -16,7 +16,6 @@ import org.storymaker.app.publish.UploadWorker;
 import org.storymaker.app.publish.UploaderBase;
 import io.scal.secureshareui.controller.SSHSiteController;
 import io.scal.secureshareui.controller.SiteController;
-import io.scal.secureshareui.controller.SoundCloudSiteController;
 
 public class SSHUploader extends UploaderBase {
     private final String TAG = "SSHUploader";
